Refatorando o código, adicionando audit. Obs: Corrigir os endpoints da controller de projetos